# LilScript

./: .gitignore  README.md  arena.txt  dune-project  lilscript.opam
example_games/: dropper.lil  error.lil  error_color.lil  error_keybind.lil  error_shared_keybinds.lil  error_spawn.lil  error_string_arith.lil  error_undefined.lil  keybind.lil  list.lil  lucas.lil  mads.lil  math.lil  mvp.gg  mvp.lil  mvp.py  precedence_test.lil  spleef.lil  string.lil  tobi.lil
lib/: arena.ml  arena_reader.ml  ast.ml  ast_printer.ml  codegen.ml  dune  keys.ml  lexer.mll  lexer_utils.ml  parser.mly  typecheck.ml
maps/: TobiGame.txt  dropper.txt  flappy.txt  level1.txt  level2.txt  level3.txt  lucasmap.txt  spleef.txt  test1.txt
pygame/: block.py  dropper.py  level.py  lucas.py  mads.py  main.py  mvp.py  mvpObjects.py  player.py  settings.py  spleef.py  tobi.py  utils.py
test/: dune  test.ls  test_acceptance.ml  test_codegen.ml  test_diagnostics.ml  test_helpers.ml  test_lexer.ml  test_lilscript.ml  test_parser.ml  test_pipeline.ml  test_typecheck.ml
