(lang dune 3.21)

(name lilscript)

(using menhir 3.0)

(generate_opam_files true)

(source
 (github lucasmoerch/LilScript))

(authors "SW9P4")

(maintainers "SW9P4")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name lilscript)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
